Fix select element width on mobile

--- a/src/stylesheets/components/searchBar.scss
+++ b/src/stylesheets/components/searchBar.scss
@@ -58,5 +58,11 @@
 
       }
     }
+
+    &__select-container {
+      &--select {
+        width: 90px;
+      }
+    }
   }
 }
